# vuefinder-rust

./: .env.example  Cargo.toml  api.yaml
src/: app_config.rs  finder.rs  lib.rs  main.rs  payload.rs  router.rs  thumbnail.rs
src/storages/: local.rs  mod.rs  s3.rs
