[package]
name = "vuefinder"
version = "4.0.0"
authors = ["boenfu"]
description = "A Rust implementation of VueFinder file manager"
edition = "2021"
license = "MIT"
repository = "https://github.com/boenfu/vuefinder"
keywords = ["file-manager", "web", "vue", "vuefinder"]
categories = ["filesystem", "web-programming"]
readme = "README.md"

[lib]
name = "vuefinder"
path = "src/lib.rs"

[[bin]]
name = "vuefinder"
path = "src/main.rs"
required-features = ["binary"]

[features]
default = ["binary"]
binary = []

[dependencies]
# HTTP & Web
actix-web = { version = "4.13.0", features = ["macros"] }
actix-multipart = { version = "0.7.2", features = ["derive"] }
tempfile = "3.27.0"
actix-cors = "0.7.1"
clap = { version = "4.6.1", features = ["derive"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Async Runtime
tokio = { version = "1.52.1", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
futures-util = "0.3.32"
async-stream = "0.3"
async-trait = "0.1.89"

# File Operations
zip = "8.6.0"
mime_guess = "2.0"

# Image Processing
image = { version = "0.25.10", features = ["jpeg", "png", "gif", "webp", "bmp", "tiff"] }

# Caching
lru = "0.18.0"

# S3
aws-sdk-s3 = { version = "1.131.0", features = ["behavior-version-latest"] }
aws-config = "1"
aws-credential-types = { version = "1.2.14", features = ["hardcoded-credentials"] }

# Error Handling
thiserror = "2.0.18"
anyhow = "1.0.102"

# Logging
log = "0.4"
env_logger = "0.11.10"
dotenvy = "0.15"

[dev-dependencies]
tokio-test = "0.4.5"
tempfile = "3.8"
